deploy/account.yml
---
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: "account-v1-0-snapshot"
  labels:
    appName: account
    appNameVersion: "account-v1-0-snapshot"
spec:
  replicas: 3
  selector:
    matchLabels:
      appNameVersion: "account-v1-0-snapshot"
  template:
    metadata:
      labels:
        appName: account
        appNameVersion: "account-v1-0-snapshot"
    spec:
      restartPolicy: Always
      containers:
        - name: account
          image: "account-impl:1.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10000
              name: http
            - containerPort: 10001
              name: "akka-remote"
            - containerPort: 10002
              name: "akka-mgmt-http"
          volumeMounts: []
          command:
            - "/rp-start"
          args:
            - "bin/account-impl"
          readinessProbe:
            httpGet:
              path: "/platform-tooling/ready"
              port: "akka-mgmt-http"
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/platform-tooling/healthy"
              port: "akka-mgmt-http"
            periodSeconds: 10
            initialDelaySeconds: 60
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: account
  name: account
spec:
  ports:
    - name: http
      port: 10000
      protocol: TCP
      targetPort: 10000
    - name: "akka-remote"
      port: 10001
      protocol: TCP
      targetPort: 10001
    - name: "akka-mgmt-http"
      port: 10002
      protocol: TCP
      targetPort: 10002
  selector:
    appName: account
